zombie rollers on ice, sliding mettal zombie rush
GOOD FPS!
FUN!

--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
     <head>
     </head>
     <body>
-        <script src="j.js"></script>
-        <script src="_.js"></script>
-        <script src="pixi.dev.js"></script>
-        <script src='test.js'></script>
+        <script src="/lib/jquery.js"></script>
+        <script src="/lib/_.js"></script>
+        <script src="/lib/pixi.dev.js"></script>
+        <script src="/lib/Box2D.js"></script>
+        <script src="/lib/Stats.js"></script>
+        <script src='/lib/keyboard.js'></script>
+
+        <script src='/src/object2d.js'></script>
+        <script src='/src/zombie.js'></script>
+        <script src='/src/player.js'></script>
+        <script src='/src/game.js'></script>
+        <script src='/src/main.js'></script>
     </body>
 </html>
