walls, player, zombie

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <script src='/lib/keyboard.js'></script>
 
         <script src='/src/object2d.js'></script>
+        <script src='/src/wall.js'></script>
         <script src='/src/zombie.js'></script>
         <script src='/src/player.js'></script>
         <script src='/src/game.js'></script>
