--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
     <head>
     </head>
     <body>
-        <script src="/lib/jquery.js"></script>
-        <script src="/lib/_.js"></script>
-        <script src="/lib/pixi.dev.js"></script>
-        <script src="/lib/Box2D.js"></script>
-        <script src="/lib/Stats.js"></script>
-        <script src='/lib/keyboard.js'></script>
+        <script src="lib/jquery.js"></script>
+        <script src="lib/underscore.js"></script>
+        <script src="lib/pixi.dev.js"></script>
+        <script src="lib/Box2D.js"></script>
+        <script src="lib/Stats.js"></script>
+        <script src='lib/keyboard.js'></script>
 
-        <script src='/src/object2d.js'></script>
-        <script src='/src/wall.js'></script>
-        <script src='/src/zombie.js'></script>
-        <script src='/src/player.js'></script>
-        <script src='/src/game.js'></script>
-        <script src='/src/main.js'></script>
+        <script src='src/object2d.js'></script>
+        <script src='src/wall.js'></script>
+        <script src='src/zombie.js'></script>
+        <script src='src/player.js'></script>
+        <script src='src/game.js'></script>
+        <script src='src/main.js'></script>
     </body>
 </html>
