--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
+
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
     </head>
     <body>
         <script src="lib/jquery.js"></script>
