player moves and have friction with floor

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <script src="lib/Box2D.js"></script>
         <script src="lib/Stats.js"></script>
         <script src='lib/keyboard.js'></script>
+	
+	<script src='src/helpers/math.js'></script>
 
         <script src='src/object2d.js'></script>
         <script src='src/wall.js'></script>
