--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
         <script src="lib/Stats.js"></script>
         <script src='lib/keyboard.js'></script>
 	
-	<script src='src/helpers/math.js'></script>
+	    <script src='src/helpers/math.js'></script>
 
         <script src='src/object2d.js'></script>
         <script src='src/wall.js'></script>
         <script src='src/zombie.js'></script>
         <script src='src/player.js'></script>
+        <script src='src/bullet.js'></script>
         <script src='src/game.js'></script>
         <script src='src/main.js'></script>
     </body>
