Пули летят в правильном направлении, зомби умеют умирать.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <style type="text/css">
+            body{
+                -moz-user-select:   none;
+                -khtml-user-select: none;
+                user-select:        none;
+                -o-user-select:     none;
+                -webkit-user-select:none;
+            }
+        </style>
     </head>
     <body>
         <script src="lib/jquery.js"></script>
@@ -16,6 +25,7 @@
 
         <script src='src/object2d.js'></script>
         <script src='src/wall.js'></script>
+        <script src='src/liveObject.js'></script>
         <script src='src/zombie.js'></script>
         <script src='src/player.js'></script>
         <script src='src/bullet.js'></script>
