--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <script src="lib/Box2D.js"></script>
         <script src="lib/Stats.js"></script>
         <script src='lib/keyboard.js'></script>
-	
+        <script src='lib/soundjs-0.4.1.min.js'></script>
+
 	    <script src='src/helpers/math.js'></script>
 
         <script src='src/object2d.js'></script>
