--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
         <style type="text/css">
             body{
-                -moz-user-select:   none;
-                -khtml-user-select: none;
-                user-select:        none;
-                -o-user-select:     none;
-                -webkit-user-select:none;
+                -moz-user-select:       none;
+                -khtml-user-select:     none;
+                user-select:            none;
+                -o-user-select:         none;
+                -webkit-user-select:    none;
+                text-align:             center;
             }
         </style>
     </head>
@@ -22,15 +22,58 @@
         <script src='lib/keyboard.js'></script>
         <script src='lib/soundjs-0.4.1.min.js'></script>
 
-	    <script src='src/helpers/math.js'></script>
+        <script src='src/helpers/math.js'></script>
 
+        <script src='src/collisions.js'></script>
         <script src='src/object2d.js'></script>
         <script src='src/wall.js'></script>
         <script src='src/liveObject.js'></script>
-        <script src='src/zombie.js'></script>
+        <script src='src/zombie/zombie.js'></script>
+        <script src='src/zombie/zombie-manager.js'></script>
         <script src='src/player.js'></script>
         <script src='src/bullet.js'></script>
+        <script src='src/timer.js'></script>
         <script src='src/game.js'></script>
+        <script src='src/gameInterface/gameInterface.js'></script>
         <script src='src/main.js'></script>
+
+        <script type="text/javascript">
+            $(function(){
+                $("#volumeController").change(function(event){
+                    var volume = Number($("#volumeController option:selected").attr("value"))/10;
+                    createjs.Sound.setVolume(volume);
+
+                    localStorage.setItem("gameMasterVolume", volume);
+                });
+
+                var volume = localStorage.getItem("gameMasterVolume");
+                if (volume == null)
+                    volume = 1;
+                createjs.Sound.setVolume(volume);
+                $("#volumeController option").eq(volume * 10).attr("selected", "selected");
+            });
+        </script>
+
+        <div>
+            <div>
+                <span>HP:</span>
+                <span class="player-hp">100</span>
+            </div>
+            <div class="viewport"></div>
+            <span>Громкость</span>
+            <select id="volumeController" name="volumeController">
+                <option value="0">0</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+            </select>
+        </div>
     </body>
 </html>
