Добавил перезарядку для мили атаки у зомби

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <script src='src/object2d.js'></script>
         <script src='src/wall.js'></script>
         <script src='src/liveObject.js'></script>
+        <script src='src/zombie/enemy.js'></script>
         <script src='src/zombie/zombie.js'></script>
         <script src='src/zombie/zombie-manager.js'></script>
         <script src='src/player.js'></script>
