--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         <script src='src/zombie/enemy.js'></script>
         <script src='src/zombie/zombie.js'></script>
         <script src='src/zombie/zombie-manager.js'></script>
-        <script src='src/player.js'></script>
+        <script src='src/player/inventory.js'></script>
+        <script src='src/player/player.js'></script>
         <script src='src/bullet.js'></script>
         <script src='src/timer.js'></script>
         <script src='src/game.js'></script>
