enemy: right files and forlders names

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <script src='src/object2d.js'></script>
         <script src='src/wall.js'></script>
         <script src='src/liveObject.js'></script>
-        <script src='src/zombie/enemy.js'></script>
-        <script src='src/zombie/zombie.js'></script>
-        <script src='src/zombie/zombie-manager.js'></script>
+        <script src='src/enemy/enemy.js'></script>
+        <script src='src/enemy/zombie.js'></script>
+        <script src='src/enemy/enemy-manager.js'></script>
         <script src='src/player/inventory.js'></script>
         <script src='src/player/player.js'></script>
         <script src='src/bullet.js'></script>
