--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
         <script src='src/zombie/zombie-manager.js'></script>
         <script src='src/player/inventory.js'></script>
         <script src='src/player/player.js'></script>
-        <script src='src/bullet.js'></script>
+        <script src='src/weapon/bullet.js'></script>
+        <script src='src/weapon/weaponsStats.js'></script>
+        <script src='src/weapon/weaponController.js'></script>
         <script src='src/timer.js'></script>
         <script src='src/game.js'></script>
         <script src='src/gameInterface/gameInterface.js'></script>
