--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <style type="text/css">
+        <style>
             body{
                 -moz-user-select:       none;
                 -khtml-user-select:     none;
@@ -23,6 +23,7 @@
         <script src='lib/soundjs-0.4.1.min.js'></script>
 
         <script src='src/helpers/math.js'></script>
+        <script src='src/helpers/volume.js'></script>
 
         <script src='src/collisions.js'></script>
         <script src='src/object2d.js'></script>
@@ -40,23 +41,6 @@
         <script src='src/game.js'></script>
         <script src='src/gameInterface/gameInterface.js'></script>
         <script src='src/main.js'></script>
-
-        <script type="text/javascript">
-            $(function(){
-                $("#volumeController").change(function(event){
-                    var volume = Number($("#volumeController option:selected").attr("value"))/10;
-                    createjs.Sound.setVolume(volume);
-
-                    localStorage.setItem("gameMasterVolume", volume);
-                });
-
-                var volume = localStorage.getItem("gameMasterVolume");
-                if (volume == null)
-                    volume = 1;
-                createjs.Sound.setVolume(volume);
-                $("#volumeController option").eq(volume * 10).attr("selected", "selected");
-            });
-        </script>
 
         <div>
             <div>
