--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <script src='src/weapon/weaponsStats.js'></script>
         <script src='src/weapon/weaponController.js'></script>
         <script src='src/timer.js'></script>
+        <script src='src/camera.js'></script>
         <script src='src/game.js'></script>
         <script src='src/gameInterface/gameInterface.js'></script>
         <script src='src/main.js'></script>
