+ bower/package.json/grunt
- included libs

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         </style>
     </head>
     <body>
-        <script src="lib/jquery.js"></script>
-        <script src="lib/underscore.js"></script>
-        <script src="lib/pixi.dev.js"></script>
-        <script src="lib/Box2D.js"></script>
+        <script src="lib/jquery/index.js"></script>
+        <script src="lib/underscore/index.js"></script>
+        <script src="lib/pixi/index.js"></script>
+        <script src="lib/box2dweb/index.js"></script>
         <script src="lib/Stats.js"></script>
-        <script src='lib/keyboard.js'></script>
-        <script src='lib/soundjs-0.4.1.min.js'></script>
+        <script src='lib/keyboard/keyboard.js'></script>
+        <script src='lib/soundjs/index.js'></script>
 
         <script src='src/helpers/math.js'></script>
         <script src='src/helpers/volume.js'></script>
