+ zombie a star algorith

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <script src="lib/Stats.js"></script>
         <script src='lib/keyboard/keyboard.js'></script>
         <script src='lib/soundjs/index.js'></script>
+        <script src='lib/astar/index.js'></script>
+        <script src='lib/graph.js'></script>
 
         <script src='src/helpers/math.js'></script>
         <script src='src/helpers/volume.js'></script>
@@ -28,6 +30,7 @@
         <script src='src/collisions.js'></script>
         <script src='src/object2d.js'></script>
         <script src='src/wall.js'></script>
+        <script src='src/map.js'></script>
         <script src='src/liveObject.js'></script>
         <script src='src/enemy/enemy.js'></script>
         <script src='src/enemy/zombie.js'></script>
