--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         <script src='src/helpers/math.js'></script>
         <script src='src/helpers/volume.js'></script>
 
+        <script src='src/map/astar.js'></script>
+        <script src='src/EventDispatcher.js'></script>
         <script src='src/collisions.js'></script>
         <script src='src/object2d.js'></script>
         <script src='src/wall.js'></script>
