Оптимизированный поиск пути. Работает по принципу все ищут одного.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <script src='src/helpers/volume.js'></script>
 
         <script src='src/map/astar.js'></script>
+        <script src='src/map/path_finder.js'></script>
         <script src='src/EventDispatcher.js'></script>
         <script src='src/collisions.js'></script>
         <script src='src/object2d.js'></script>
