enemy-manager.js -> enemyManager.js

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <script src='src/liveObject.js'></script>
         <script src='src/enemy/enemy.js'></script>
         <script src='src/enemy/zombie.js'></script>
-        <script src='src/enemy/enemy-manager.js'></script>
+        <script src='src/enemy/enemyManager.js'></script>
         <script src='src/player/inventory.js'></script>
         <script src='src/player/player.js'></script>
         <script src='src/weapon/bullet.js'></script>
