--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
         <script src='src/timer.js'></script>
         <script src='src/camera.js'></script>
         <script src='src/game.js'></script>
+        <script src='src/scene.js'></script>
+        <script src='src/scenes/sector.js'></script>
         <script src='src/gameInterface/gameInterface.js'></script>
         <script src='src/main.js'></script>
 
