--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
         <script src='src/game.js'></script>
         <script src='src/scene.js'></script>
         <script src='src/scenes/sector.js'></script>
+        <script src='src/scenes/_sceneMap.js'></script>
+        <script src='src/scenes/sceneMap.js'></script>
         <script src='src/gameInterface/gameInterface.js'></script>
         <script src='src/main.js'></script>
 
