--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <script src='lib/keyboard/keyboard.js'></script>
         <script src='lib/soundjs/index.js'></script>
         <script src='lib/astar/index.js'></script>
-        <script src='lib/graph.js'></script>
+        <script src='lib/a_star_graph.js'></script>
+        <script src='lib/data_structures/index.js'></script>
 
         <script src='src/helpers/math.js'></script>
         <script src='src/helpers/volume.js'></script>
@@ -48,7 +49,6 @@
         <script src='src/game.js'></script>
         <script src='src/scene.js'></script>
         <script src='src/scenes/sector.js'></script>
-        <script src='src/scenes/_sceneMap.js'></script>
         <script src='src/scenes/sceneMap.js'></script>
         <script src='src/gameInterface/gameInterface.js'></script>
         <script src='src/main.js'></script>
