--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
         <script src='src/game.js'></script>
         <script src='src/scene.js'></script>
         <script src='src/scenes/sector.js'></script>
-        <script src='src/scenes/sceneMap.js'></script>
+        <script src='src/scenes/sceneMap/mapGenerator.js'></script>
+        <script src='src/scenes/sceneMap/sceneMap.js'></script>
         <script src='src/gameInterface/gameInterface.js'></script>
         <script src='src/main.js'></script>
 
