Плеер бегает по карте

--- a/index.html
+++ b/index.html
@@ -49,8 +49,13 @@
         <script src='src/game.js'></script>
         <script src='src/scene.js'></script>
         <script src='src/scenes/sector.js'></script>
+
+        <script src='src/scenes/sceneMap/simpleSector.js'></script>
+        <script src='src/scenes/sceneMap/mapUnit.js'></script>
+        <script src='src/scenes/sceneMap/mapUnitPlayer.js'></script>
         <script src='src/scenes/sceneMap/mapGenerator.js'></script>
         <script src='src/scenes/sceneMap/sceneMap.js'></script>
+
         <script src='src/gameInterface/gameInterface.js'></script>
         <script src='src/main.js'></script>
 
