+ ym and data_stractures from bower package

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <script src='lib/soundjs/index.js'></script>
         <script src='lib/astar/index.js'></script>
         <script src='lib/a_star_graph.js'></script>
-        <script src='lib/data_structures/index.js'></script>
+        <script src='lib/data-structures/distribution/browser/data-structures-1.4.1.js'></script>
 
         <script src='src/helpers/math.js'></script>
         <script src='src/helpers/volume.js'></script>
