--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
         <script src="lib/jquery/index.js"></script>
         <script src="lib/underscore/index.js"></script>
-        <script src="lib/pixi/index.js"></script>
+        <script src="lib/pixi/bin/pixi.js"></script>
         <script src="lib/box2dweb/index.js"></script>
         <script src="lib/Stats.js"></script>
 
