Вынес волны в отдельный класс

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <script src='src/liveObject.js'></script>
         <script src='src/enemy/enemy.js'></script>
         <script src='src/enemy/zombie.js'></script>
+        <script src='src/enemy/waveManager.js'></script>
         <script src='src/enemy/enemyManager.js'></script>
         <script src='src/player/inventory.js'></script>
         <script src='src/player/player.js'></script>
