--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <script src='src/object2d.js'></script>
         <script src='src/wall.js'></script>
         <script src='src/map.js'></script>
+        <script src='src/ability/ability.js'></script>
         <script src='src/liveObject.js'></script>
         <script src='src/enemy/enemy.js'></script>
         <script src='src/enemy/zombie.js'></script>
