Немного оформил карту.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
                 -o-user-select:         none;
                 -webkit-user-select:    none;
                 text-align:             center;
+
+                background:             black;
+                color:                  white;
             }
         </style>
     </head>
