Добавил сборку index.html с помощью gulp

--- a/index.html
+++ b/index.html
@@ -1,89 +1,1 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <style>
-            body{
-                -moz-user-select:       none;
-                -khtml-user-select:     none;
-                user-select:            none;
-                -o-user-select:         none;
-                -webkit-user-select:    none;
-                text-align:             center;
-
-                background:             black;
-                color:                  white;
-            }
-        </style>
-    </head>
-    <body>
-        <script src="lib/jquery/index.js"></script>
-        <script src="lib/underscore/index.js"></script>
-        <script src="lib/pixi/bin/pixi.js"></script>
-        <script src="lib/box2dweb/index.js"></script>
-        <script src="lib/Stats.js"></script>
-
-
-        <script src='lib/keyboard/keyboard.js'></script>
-        <script src='lib/soundjs/index.js'></script>
-        <script src='lib/astar/index.js'></script>
-        <script src='lib/a_star_graph.js'></script>
-        <script src='lib/data-structures/distribution/browser/data-structures-1.4.1.js'></script>
-
-        <script src="node_modules/ym/modules.js"></script>
-
-        <script src='src/helpers/math.js'></script>
-        <script src='src/helpers/volume.js'></script>
-
-        <script src='src/map/astar.js'></script>
-        <script src='src/map/path_finder.js'></script>
-        <script src='src/EventDispatcher.js'></script>
-        <script src='src/collisions.js'></script>
-        <script src='src/object2d.js'></script>
-        <script src='src/wall.js'></script>
-        <script src='src/map.js'></script>
-        <script src='src/ability/ability.js'></script>
-        <script src='src/liveObject.js'></script>
-        <script src='src/enemy/enemy.js'></script>
-        <script src='src/enemy/zombie.js'></script>
-        <script src='src/enemy/waveManager.js'></script>
-        <script src='src/enemy/enemyManager.js'></script>
-        <script src='src/player/inventory.js'></script>
-        <script src='src/player/player.js'></script>
-        <script src='src/weapon/bullet.js'></script>
-        <script src='src/weapon/weaponsStats.js'></script>
-        <script src='src/weapon/weaponController.js'></script>
-        <script src='src/timer.js'></script>
-        <script src='src/camera.js'></script>
-        <script src='src/game.js'></script>
-        <script src='src/scene.js'></script>
-        <script src='src/scenes/sector.js'></script>
-
-        <script src='src/scenes/sceneMap/simpleSector.js'></script>
-        <script src='src/scenes/sceneMap/mapUnit.js'></script>
-        <script src='src/scenes/sceneMap/mapUnitPlayer.js'></script>
-        <script src='src/scenes/sceneMap/mapGenerator.js'></script>
-        <script src='src/scenes/sceneMap/sceneMap.js'></script>
-
-        <script src='src/gameInterface/gameInterface.js'></script>
-        <script src='src/main.js'></script>
-
-        <div>
-            <div class="viewport"></div>
-            <span>Громкость</span>
-            <select id="volumeController" name="volumeController">
-                <option value="0">0</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-                <option value="8">8</option>
-                <option value="9">9</option>
-                <option value="10">10</option>
-            </select>
-        </div>
-    </body>
-</html>
+out/index.html
